# Task-Management-Django

./: build.sh  pyproject.toml  requirements.txt
todo_list/: Procfile  TODO.md  db.sqlite3  project_explanation.txt
todo_list/static/css/: dashboard.css  home.css  login.css
todo_list/tasks/: models.py  urls.py  views.py
todo_list/tasks/migrations/: 0001_initial.py  0002_task_user.py  0003_alter_task_completed_alter_task_created_at_and_more.py
todo_list/templates/: add_task.html  dashboard.html  forget_ps.html  home.html  login_page.html  msg.html  nav.html  reset_ps.html  sign_up.html  tasks.html  update.html  updateps.html
todo_list/todo_app/: admin.py  models.py  urls.py  views.py
todo_list/todo_app/migrations/: 0001_initial.py  0002_user_details.py  0003_delete_user_details.py  0004_delete_task.py
todo_list/todo_list/: settings.py  urls.py  wsgi.py
